[gd_scene load_steps=6 format=3 uid="uid://bg74262ux6abt"]

[ext_resource type="Script" path="res://BasicPlayerMovement.gd" id="1_bpo7p"]
[ext_resource type="Script" path="res://CharacterAttack.gd" id="2_b0ul3"]
[ext_resource type="Texture2D" uid="uid://dtvniaywjf2ow" path="res://icon.svg" id="3_ced1n"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7rcut"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtgnb"]
size = Vector2(0.142857, 1)

[node name="Character" type="CharacterBody2D" groups=["player"]]
collision_mask = 3
script = ExtResource("1_bpo7p")

[node name="spellHand" type="Node2D" parent="."]
z_index = 20
scale = Vector2(0.065, 0.065)
script = ExtResource("2_b0ul3")

[node name="visualAid" type="Sprite2D" parent="spellHand"]
texture = ExtResource("3_ced1n")

[node name="SpellSpawnLocation" type="Marker2D" parent="spellHand"]
position = Vector2(384.615, 9.53674e-07)

[node name="spell1Cooldown" type="Timer" parent="spellHand"]
wait_time = 5.0

[node name="playerSprite" type="Sprite2D" parent="."]
modulate = Color(0.027451, 0.0470588, 0.054902, 1)
scale = Vector2(50, 50)
texture = SubResource("CanvasTexture_7rcut")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
collision_layer = 2
collision_mask = 3

[node name="playerBody" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3.55271e-15, 0)
scale = Vector2(350, 50)
shape = SubResource("RectangleShape2D_gtgnb")

[connection signal="timeout" from="spellHand/spell1Cooldown" to="spellHand" method="_on_spell_1_cooldown_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
